; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_get_corefile_name.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_debug.c_get_corefile_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"core.%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @get_corefile_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_corefile_name(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = load i8, i8* %5, align 1
  %7 = icmp ne i8 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @r_str_newf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %14

11:                                               ; preds = %2
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @r_str_trim_dup(i8* %12)
  br label %14

14:                                               ; preds = %11, %8
  %15 = phi i8* [ %10, %8 ], [ %13, %11 ]
  ret i8* %15
}

declare dso_local i8* @r_str_newf(i8*, i32) #1

declare dso_local i8* @r_str_trim_dup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
